fix mobile overflow

--- a/content/css/base/layout.css
+++ b/content/css/base/layout.css
@@ -1,5 +1,6 @@
 :root {
   accent-color: var(--c-accent);
+  overflow-x: hidden;
 }
 
 body {
